--- a/CacheDiskConsole/CacheDiskConsole.csproj
+++ b/CacheDiskConsole/CacheDiskConsole.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CacheDiskLib\CacheDiskLib.csproj" />
+  </ItemGroup>
+
 </Project>
